# it-devops-2025

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  README.txt  build.sh
ansible/: inventory.yml  site.yml
ansible/roles/docker_install/tasks/: main.yml
ansible/roles/sqlite3_build/tasks/: main.yml
ansible/roles/sqlite3_build_docker/files/: CMakeLists.txt  Dockerfile
ansible/roles/sqlite3_build_docker/tasks/: main.yml
conan/: CMakeLists.txt  build.sh  conanfile.py
conan/src/: main.cpp
debian-vm/: Vagrantfile
ssh_keys/: id_ed25519  id_ed25519.pub
